Fix dark mode overscroll background - correct CSS selector

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
     background-color: #f0f2f5;
   }
 
-  .dark html {
+  html.dark {
     background-color: #030712;
   }
 
